# opLog

./: .gitignore  CMakeLists.txt  README.md  opLog.conf
include/opLog/: Config.h  LogLevel.h  LogRecord.h  Logger.h  formatter.h  log_level.h  logger.h
include/opLog/appender/: ConsoleAppender.h  FileAppender.h  IAppender.h  appender.h
include/opLog/formatter/: FormatStyle.h  IFormatter.h  PlainTextFormatter.h
src/: Logger.cpp  config.cpp
src/appender/: ConsoleAppender.cpp  FileAppender.cpp
src/formatter/: PlainTextFormatter.cpp
tests/: test_appender.cpp  test_config.cpp  test_formatter.cpp  test_logger.cpp
